--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -24,7 +24,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/route_title_detail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
@@ -427,6 +427,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
                     android:inputType="textMultiLine|textCapSentences"
                     android:scrollbars="vertical"
                     android:text="    Hello these are notes I wrote down about this trail. I don't know why I'm writing so much about this trail." />
