--- a/app/src/main/res/layout/content_debug_walk.xml
+++ b/app/src/main/res/layout/content_debug_walk.xml
@@ -33,7 +33,7 @@
         android:id="@+id/text_steps_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/intentional_walk_steps"
+        android:text="Steps: "
         android:textSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_steps_value"
         app:layout_constraintStart_toStartOf="@+id/text_time_title"></TextView>
@@ -76,10 +76,11 @@
         android:id="@+id/text_steps_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="20dp"
         android:text="0"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/text_distance_title"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/text_distance_title"
         app:layout_constraintTop_toBottomOf="@+id/text_time_value"></TextView>
 
