fixed something stupid that was fixed and shouldve stayed fixed forever ago

--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -428,6 +428,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="10dp"
+                    android:baselineAligned="false"
                     android:inputType="textMultiLine|textCapSentences"
                     android:scrollbars="vertical"
                     android:text="    Hello these are notes I wrote down about this trail. I don't know why I'm writing so much about this trail." />
