--- a/app/src/main/res/layout/content_intentional_walk.xml
+++ b/app/src/main/res/layout/content_intentional_walk.xml
@@ -113,26 +113,27 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_pause_walk"
-        android:layout_width="0dp"
-        android:layout_height="89dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="61dp"
-        android:text="PAUSE"
-        android:textSize="45dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/distance_metrics_layout"></Button>
-
-    <Button
         android:id="@+id/btn_continue_walk"
         android:layout_width="0dp"
         android:layout_height="89dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="20dp"
         android:text="CONTINUE"
         android:textSize="45dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/distance_metrics_layout"></Button>
+
+    <Button
+        android:id="@+id/btn_pause_walk"
+        android:layout_width="0dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="61dp"
+        android:text="PAUSE"
+        android:textSize="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/distance_metrics_layout"></Button>
 
@@ -141,7 +142,7 @@
         android:layout_width="0dp"
         android:layout_height="89dp"
         android:layout_marginStart="61dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="61dp"
         android:text="END"
         android:textSize="45dp"
