--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/debug_walk"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/team_screen"
+        android:orderInCategory="150"
+        android:title="Team Screen"
+        app:showAsAction="never" />
 </menu>
