--- a/app/src/main/res/layout/activity_routes_screen.xml
+++ b/app/src/main/res/layout/activity_routes_screen.xml
@@ -16,7 +16,8 @@
     <LinearLayout
         android:id="@+id/button_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/nav_view"
         android:layout_marginBottom="0dp"
         android:gravity="bottom"
         android:orientation="horizontal">
@@ -43,5 +44,18 @@
             android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="#FFFFFF"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
