--- a/app/src/main/res/layout/activity_team_screen.xml
+++ b/app/src/main/res/layout/activity_team_screen.xml
@@ -29,7 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="#ED9E29"
         app:backgroundTint="#D9FFD8"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
