--- a/app/src/main/res/layout/activity_team_screen2.xml
+++ b/app/src/main/res/layout/activity_team_screen2.xml
@@ -7,19 +7,11 @@
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize">
 
-
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@drawable/shadow"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view" />
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFFFFFFF"
+        android:background="?android:attr/windowBackground"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
