--- a/app/src/main/res/layout/activity_routes_screen.xml
+++ b/app/src/main/res/layout/activity_routes_screen.xml
@@ -60,6 +60,13 @@
             android:textSize="18sp" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_above="@id/nav_view"
+        android:background="@drawable/shadow"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
