--- a/app/src/main/res/layout/activity_team_individ_routes.xml
+++ b/app/src/main/res/layout/activity_team_individ_routes.xml
@@ -36,6 +36,16 @@
 
     </androidx.viewpager.widget.ViewPager>
 
+    <View
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_above="@id/view_pager"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="55dp"
+        android:background="@drawable/shadow"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
@@ -48,12 +58,20 @@
         app:layout_anchorGravity="bottom"
         app:menu="@menu/bottom_nav_menu">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_above="@id/nav_view"
-            android:background="@drawable/shadow"
-            app:layout_constraintBottom_toTopOf="@+id/nav_view" />
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="75dp"
+        android:clickable="true"
+        app:backgroundTint="#EDB819"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
