--- a/app/src/main/res/layout/activity_team_individ_routes.xml
+++ b/app/src/main/res/layout/activity_team_individ_routes.xml
@@ -61,7 +61,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
