--- a/app/src/main/res/layout/activity_team_screen2.xml
+++ b/app/src/main/res/layout/activity_team_screen2.xml
@@ -53,7 +53,7 @@
         app:menu="@menu/bottom_nav_menu" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
