--- a/app/src/main/res/layout/activity_team_screen2.xml
+++ b/app/src/main/res/layout/activity_team_screen2.xml
@@ -34,6 +34,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:id="@+id/team_list"
+        android:layout_width="418dp"
+        android:layout_height="548dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"></ListView>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
