US 13 Task 131 added checkmark functionality to Routes detail screen and finished US 13

--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -377,7 +377,8 @@
                         android:layout_marginTop="10dp"
                         android:text="@string/true_tick"
                         android:textAlignment="center"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
 
                 <LinearLayout
