--- a/app/src/main/res/layout/activity_routes_screen.xml
+++ b/app/src/main/res/layout/activity_routes_screen.xml
@@ -21,7 +21,7 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/teams_routes_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
