--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="150"
         android:title="Team Screen"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/invites"
+        android:orderInCategory="200"
+        android:title="Pending Invitations"
+        app:showAsAction="never" />
 </menu>
