--- a/app/src/main/res/layout/fragment_team_routes.xml
+++ b/app/src/main/res/layout/fragment_team_routes.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test"
+        android:text="Team Routes Page"
         tools:layout_editor_absoluteY="73dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
