--- a/app/src/main/res/layout/fragment_individ_routes.xml
+++ b/app/src/main/res/layout/fragment_individ_routes.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Individual Routes"
-        tools:layout_editor_absoluteY="73dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/list_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
