--- a/app/src/main/res/layout/fragment_team_routes.xml
+++ b/app/src/main/res/layout/fragment_team_routes.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Team Routes Page"
-        tools:layout_editor_absoluteY="73dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/teams_routes_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
