moved checkmark to other side to leave space for member icon

--- a/app/src/main/res/layout/route_adapter_view_layout.xml
+++ b/app/src/main/res/layout/route_adapter_view_layout.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:weightSum="100">
 
     <TextView
-        android:id="@+id/previously_walked"
-        android:layout_width="match_parent"
+        android:id="@+id/route_name"
+        android:layout_width="307dp"
         android:layout_height="wrap_content"
-        android:text="@string/true_tick"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:layout_weight="85"/>
+        android:layout_marginLeft="50dp"
+        android:text="Route Name"
+        android:textSize="25sp" />
 
-        <TextView
-            android:id="@+id/route_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Route Name"
-            android:textSize="25sp"/>
+    <TextView
+        android:id="@+id/previously_walked"
+        android:layout_width="52dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/true_tick"
+        android:textSize="30sp" />
 
 </LinearLayout>
