#105: Implemented basis of Team routes

--- a/app/src/main/res/layout/fragment_individ_routes.xml
+++ b/app/src/main/res/layout/fragment_individ_routes.xml
@@ -10,7 +10,7 @@
     <ListView
         android:id="@+id/individ_routes_list"
         android:layout_width="match_parent"
-        android:layout_height="530dp"
+        android:layout_height="fill_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
