--- a/app/src/main/res/layout/fragment_team_routes.xml
+++ b/app/src/main/res/layout/fragment_team_routes.xml
@@ -10,7 +10,7 @@
     <ListView
         android:id="@+id/teams_routes_list"
         android:layout_width="match_parent"
-        android:layout_height="530dp"
+        android:layout_height="fill_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Team Routes Page"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/teams_routes_list" />
 
