--- a/app/src/main/res/layout/route_adapter_view_layout.xml
+++ b/app/src/main/res/layout/route_adapter_view_layout.xml
@@ -7,24 +7,27 @@
 
     <ImageView
         android:id="@+id/route_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"/>
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp" />
 
     <TextView
         android:id="@+id/route_name"
-        android:layout_width="307dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/member_icon"
-        android:text="Route Name"
         android:paddingTop="15dp"
-        android:textSize="25sp"
-        android:textColor="@android:color/background_dark" />
+        android:paddingBottom="15dp"
+        android:text="Route Name"
+        android:textColor="@android:color/background_dark"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/previously_walked"
-        android:layout_width="52dp"
+        android:layout_width="46dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/true_tick"
