--- a/app/src/main/res/layout/team_list_item.xml
+++ b/app/src/main/res/layout/team_list_item.xml
@@ -8,20 +8,23 @@
 
     <ImageView
         android:id="@+id/member_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"/>
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:id="@+id/member_name"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_toRightOf="@id/member_icon"
         android:paddingTop="15dp"
         android:text="@+id/first_name"
-        android:textSize="15sp"
-        android:textColor="@android:color/background_dark"/>
+        android:textColor="@android:color/background_dark"
+        android:textSize="15sp" />
 
 
 </RelativeLayout>
