US 4: Changed default check mark visibility to invisible

--- a/app/src/main/res/layout/route_adapter_view_layout.xml
+++ b/app/src/main/res/layout/route_adapter_view_layout.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/true_tick"
+        android:visibility="invisible"
         android:textSize="30sp" />
 
 
