--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -30,14 +30,13 @@
 
             <Button
                 android:id="@+id/yes"
-                android:layout_width="wrap_content"
+                android:layout_width="39dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/ic_check_black_24dp"
-                android:backgroundTint="#FD0000"
-                android:text="Button" />
+                android:backgroundTint="@color/colorPrimary" />
 
             <Button
                 android:id="@+id/not_good_time"
@@ -46,6 +45,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
+                android:background="#FFFFFF"
                 android:text="Button" />
 
         </LinearLayout>
