--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -69,6 +69,8 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         android:text="Starting Point"
+                        android:clickable="true"
+                        android:onClick="launchGoogleMaps"
                         android:textSize="18sp" />
 
                 </TableRow>
