--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -463,7 +463,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#DCBF00"
+                android:backgroundTint="#EDB046"
                 android:text="Schedule Walk" />
 
         </LinearLayout>
