--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:foregroundTint="#FFFFFF">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/vote_cards"
@@ -22,31 +22,28 @@
                 android:id="@+id/vote_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="16dp"
                 android:layout_weight="20"
                 android:text="Name"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/yes"
-                android:layout_width="39dp"
+                android:layout_width="64dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_check_black_24dp"
-                android:backgroundTint="@color/colorPrimary" />
+                android:background="@drawable/button_yes_off" />
 
             <Button
-                android:id="@+id/not_good_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:id="@+id/no"
+                android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:text="Button" />
+                android:background="@drawable/button_no_off" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
