--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -15,7 +15,9 @@
         <LinearLayout
             android:id="@+id/vote_row"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -25,21 +27,30 @@
                 android:layout_marginStart="16dp"
                 android:layout_weight="20"
                 android:text="Name"
-                android:textSize="20sp" />
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/yes"
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="24dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_yes_off" />
 
             <Button
-                android:id="@+id/no"
-                android:layout_width="64dp"
-                android:layout_height="match_parent"
+                android:id="@+id/bad_time"
+                android:layout_width="30dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_no_off" />
+
+            <Button
+                android:id="@+id/dont_want"
+                android:layout_width="30dp"
+                android:layout_height="24dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
