--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -22,39 +22,48 @@
 
             <TextView
                 android:id="@+id/vote_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
                 android:layout_weight="20"
                 android:text="Name"
                 android:textSize="14sp" />
 
-            <Button
-                android:id="@+id/yes"
-                android:layout_width="30dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_yes_off" />
+            <RadioGroup
+                android:id="@+id/voting_btns"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/bad_time"
-                android:layout_width="30dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_no_off" />
+                <RadioButton
+                    android:id="@+id/yes"
+                    android:layout_width="20dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_weight="1"
+                    android:button="@drawable/button_yes_off" />
 
-            <Button
-                android:id="@+id/dont_want"
-                android:layout_width="30dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="30dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_no_off" />
+                <RadioButton
+                    android:id="@+id/bad_time"
+                    android:layout_width="20dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_weight="1"
+                    android:button="@drawable/button_no_off" />
+
+                <RadioButton
+                    android:id="@+id/dont_want"
+                    android:layout_width="20dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_weight="1"
+                    android:button="@drawable/button_no_off" />
+
+            </RadioGroup>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
