US 7: made button invisble to non-proposer, added listener to schedule and withdraw button

--- a/app/src/main/res/layout/activity_proposed_walk_screen.xml
+++ b/app/src/main/res/layout/activity_proposed_walk_screen.xml
@@ -677,6 +677,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="#cc0c0c"
                     android:text="@string/cancel_text"
+                    android:visibility="gone"
                     android:textColor="#FFFFFF" />
 
                 <Button
@@ -688,6 +689,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="#0CCC6F"
                     android:text="Schedule"
+                    android:visibility="gone"
                     android:textColor="#FFFFFF" />
             </LinearLayout>
 
